Switch to upterm
tmate has buggy mouse handling.

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -15,5 +15,5 @@ jobs:
         key_file: id_ecdsa
     - uses: actions/checkout@v2
     - run: source script-linux.sh
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@master
+    - name: Setup upterm session
+      uses: lhotari/action-upterm@v1
