--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -15,5 +15,5 @@ jobs:
         key_file: id_ecdsa
     - uses: actions/checkout@v2
     - run: source script-mac.sh
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v2
+    - name: Setup upterm session
+      uses: lhotari/action-upterm@v1
